--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "three": "^0.182.0",
     "ua-parser-js": "^1.0.37",
     "uuid": "^11.1.0",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "vscode-jsonrpc": "^8.2.1",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-uri": "^3.1.0",
