--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -213,6 +213,7 @@ jobs:
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          # Windows codesign config is part of electron-builder.yml and handled in prepare-files
         run: npm run tronb:package:${{ env.IS_STAGING == 'true' && 'dev' || 'prod' }}
 
       - name: List artifacts in out/
@@ -220,9 +221,21 @@ jobs:
 
       - uses: actions/upload-artifact@v6
         with:
-          name: out-${{ matrix.platform }}
+          name: out-arm64-${{ matrix.platform }}
+          # first two will pick both Zoo Design Studio-$VERSION-arm64-win.exe and Zoo Design Studio-$VERSION-win.exe
           path: |
-            out/*${{ env.VERSION_NO_V }}*
+            out/*-${{ env.VERSION_NO_V }}-win.*
+            out/*-${{ env.VERSION_NO_V }}-arm64-win.*
+            out/*-arm64-mac.*
+            out/*-arm64-linux.*
+
+      - uses: actions/upload-artifact@v6
+        with:
+          name: out-x64-${{ matrix.platform }}
+          path: |
+            out/*-x64-win.*
+            out/*-x64-mac.*
+            out/*-x86_64-linux.*
 
       - uses: actions/upload-artifact@v6
         if: ${{ env.IS_RELEASE == 'true' || env.FORCE_RELEASE_BUILD == 'true' || env.IS_STAGING == 'true' }}
