--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -7,6 +7,7 @@ files:
   - "!node_modules/win-ca/pem/**"
 mac:
   category: public.app-category.developer-tools
+  artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
     - target: dmg
       arch:
@@ -25,6 +26,7 @@ mac:
       role: Editor
       rank: Owner
 win:
+  artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
     - target: nsis
       arch:
@@ -44,6 +46,7 @@ nsis:
   installerIcon: "assets/icon.ico"
   include: "./scripts/installer.nsh"
 linux:
+  artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
     - target: appImage
       arch:
