--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -45,6 +45,7 @@ nsis:
   allowElevation: true
   installerIcon: "assets/icon.ico"
   include: "./scripts/installer.nsh"
+  buildUniversalInstaller: false
 linux:
   artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
