--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -222,10 +222,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: out-arm64-${{ matrix.platform }}
-          # first two will pick both Zoo Design Studio-$VERSION-arm64-win.exe and Zoo Design Studio-$VERSION-win.exe
           path: |
-            out/*-${{ env.VERSION_NO_V }}-win.*
-            out/*-${{ env.VERSION_NO_V }}-arm64-win.*
             out/*-arm64-mac.*
             out/*-arm64-linux.*
 
@@ -236,6 +233,12 @@ jobs:
             out/*-x64-win.*
             out/*-x64-mac.*
             out/*-x86_64-linux.*
+
+      - uses: actions/upload-artifact@v6
+        with:
+          name: out-universal-windows
+          path: |
+            out/*.exe
 
       - uses: actions/upload-artifact@v6
         if: ${{ env.IS_RELEASE == 'true' || env.FORCE_RELEASE_BUILD == 'true' || env.IS_STAGING == 'true' }}
@@ -262,12 +265,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: out-arm64-windows
-          path: out
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: out-x64-windows
+          name: out-universal-windows
           path: out
 
       - uses: actions/download-artifact@v4
@@ -311,6 +309,7 @@ jobs:
           PUB_DATE: ${{ github.event.repository.updated_at }}
           WEBSITE_DIR: ${{ env.IS_STAGING == 'true' && 'dl.zoo.dev/releases/design-studio/staging' || 'dl.zoo.dev/releases/design-studio' }}
           URL_CODED_NAME: ${{ env.IS_STAGING == 'true' && 'Zoo%20Design%20Studio%20%28Staging%29' || 'Zoo%20Design%20Studio' }}
+          URL_CODED_NAME_WINDOWS_SUFFIX: '%20Setup%20'
         run: |
           RELEASE_DIR=https://${WEBSITE_DIR}
           jq --null-input \
@@ -319,8 +318,7 @@ jobs:
             --arg notes "${NOTES}" \
             --arg mac_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-mac.dmg" \
             --arg mac_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x64-mac.dmg" \
-            --arg windows_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-win.exe" \
-            --arg windows_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x64-win.exe" \
+            --arg windows_universal_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}${{ env.URL_CODED_NAME_WINDOWS_SUFFIX }}${VERSION_NO_V}.exe" \
             --arg linux_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-linux.AppImage" \
             --arg linux_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x86_64-linux.AppImage" \
             '{
@@ -335,10 +333,10 @@ jobs:
                   "url": $mac_x64_url
                 },
                 "exe-arm64": {
-                  "url": $windows_arm64_url
+                  "url": $windows_universal_url
                 },
                 "exe-x64": {
-                  "url": $windows_x64_url
+                  "url": $windows_universal_url
                 },
                 "appimage-arm64": {
                   "url": $linux_arm64_url
