--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,18 +5,18 @@ directories:
 files:
   - .vite/**
   - "!node_modules/win-ca/pem/**"
+  - "!node_modules/*esbuild/**"
+  - "!node_modules/@napi-rs/**"
 mac:
   category: public.app-category.developer-tools
-  artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
+  artifactName: "${productName}-${version}-universal-${os}.${ext}"
   target:
     - target: dmg
       arch:
-        - x64
-        - arm64
+        - universal
     - target: zip
       arch:
-        - x64
-        - arm64
+        - universal
   notarize: true
   fileAssociations:
     - ext: kcl
