--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -222,10 +222,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: out-arm64-${{ matrix.platform }}
-          # first two will pick both Zoo Design Studio-$VERSION-arm64-win.exe and Zoo Design Studio-$VERSION-win.exe
           path: |
-            out/*-${{ env.VERSION_NO_V }}-win.*
-            out/*-${{ env.VERSION_NO_V }}-arm64-win.*
             out/*-arm64-mac.*
             out/*-arm64-linux.*
 
@@ -233,9 +230,15 @@ jobs:
         with:
           name: out-x64-${{ matrix.platform }}
           path: |
-            out/*-x64-win.*
             out/*-x64-mac.*
             out/*-x86_64-linux.*
+
+      - uses: actions/upload-artifact@v6
+        if: ${{ matrix.platform == 'windows' }}
+        with:
+          name: out-universal-windows
+          path: |
+            out/*universal-win.exe
 
       - uses: actions/upload-artifact@v6
         if: ${{ env.IS_RELEASE == 'true' || env.FORCE_RELEASE_BUILD == 'true' || env.IS_STAGING == 'true' }}
@@ -262,12 +265,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: out-arm64-windows
-          path: out
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: out-x64-windows
+          name: out-universal-windows
           path: out
 
       - uses: actions/download-artifact@v4
@@ -319,8 +317,7 @@ jobs:
             --arg notes "${NOTES}" \
             --arg mac_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-mac.dmg" \
             --arg mac_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x64-mac.dmg" \
-            --arg windows_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-win.exe" \
-            --arg windows_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x64-win.exe" \
+            --arg windows_universal_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-universal-win.exe" \
             --arg linux_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-linux.AppImage" \
             --arg linux_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x86_64-linux.AppImage" \
             '{
@@ -335,10 +332,10 @@ jobs:
                   "url": $mac_x64_url
                 },
                 "exe-arm64": {
-                  "url": $windows_arm64_url
+                  "url": $windows_universal_url
                 },
                 "exe-x64": {
-                  "url": $windows_x64_url
+                  "url": $windows_universal_url
                 },
                 "appimage-arm64": {
                   "url": $linux_arm64_url
