--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -26,7 +26,7 @@ mac:
       role: Editor
       rank: Owner
 win:
-  artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
+  artifactName: "${productName}-${version}-universal-${os}.${ext}"
   target:
     - target: nsis
       arch:
@@ -45,7 +45,7 @@ nsis:
   allowElevation: true
   installerIcon: "assets/icon.ico"
   include: "./scripts/installer.nsh"
-  buildUniversalInstaller: false
+  buildUniversalInstaller: true
 linux:
   artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
