--- a/.github/workflows/publish-apps.yml
+++ b/.github/workflows/publish-apps.yml
@@ -46,7 +46,14 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: out-universal-macos
+          name: out-universal-macos-dmg
+          path: out
+          run-id: ${{ steps.tag_workflow_id.outputs.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: out-universal-macos-zip
           path: out
           run-id: ${{ steps.tag_workflow_id.outputs.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
