--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -220,18 +220,25 @@ jobs:
         run: ls -R out
 
       - uses: actions/upload-artifact@v6
+        if: ${{ matrix.platform == 'linux' }}
         with:
-          name: out-arm64-${{ matrix.platform }}
+          name: out-arm64-linux
           path: |
-            out/*-arm64-mac.*
             out/*-arm64-linux.*
 
       - uses: actions/upload-artifact@v6
+        if: ${{ matrix.platform == 'linux' }}
         with:
-          name: out-x64-${{ matrix.platform }}
+          name: out-x64-linux
           path: |
-            out/*-x64-mac.*
             out/*-x86_64-linux.*
+
+      - uses: actions/upload-artifact@v6
+        if: ${{ matrix.platform == 'macos' }}
+        with:
+          name: out-universal-macos
+          path: |
+            out/*universal-mac.*
 
       - uses: actions/upload-artifact@v6
         if: ${{ matrix.platform == 'windows' }}
@@ -275,12 +282,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: out-arm64-macos
-          path: out
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: out-x64-macos
+          name: out-universal-macos
           path: out
 
       - uses: actions/download-artifact@v4
@@ -315,8 +317,7 @@ jobs:
             --arg version "${VERSION}" \
             --arg pub_date "${PUB_DATE}" \
             --arg notes "${NOTES}" \
-            --arg mac_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-mac.dmg" \
-            --arg mac_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x64-mac.dmg" \
+            --arg mac_universal_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-universal-mac.dmg" \
             --arg windows_universal_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-universal-win.exe" \
             --arg linux_arm64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-arm64-linux.AppImage" \
             --arg linux_x64_url "$RELEASE_DIR/${{ env.URL_CODED_NAME }}-${VERSION_NO_V}-x86_64-linux.AppImage" \
@@ -326,10 +327,10 @@ jobs:
               "notes": $notes,
               "platforms": {
                 "dmg-arm64": {
-                  "url": $mac_arm64_url
+                  "url": $mac_universal_url
                 },
                 "dmg-x64": {
-                  "url": $mac_x64_url
+                  "url": $mac_universal_url
                 },
                 "exe-arm64": {
                   "url": $windows_universal_url
