Change last_download.json generation to use universal keys for Windows and macOS Fixes #10187

--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -326,16 +326,10 @@ jobs:
               "pub_date": $pub_date,
               "notes": $notes,
               "platforms": {
-                "dmg-arm64": {
+                "dmg-universal": {
                   "url": $mac_universal_url
                 },
-                "dmg-x64": {
-                  "url": $mac_universal_url
-                },
-                "exe-arm64": {
-                  "url": $windows_universal_url
-                },
-                "exe-x64": {
+                "exe-universal": {
                   "url": $windows_universal_url
                 },
                 "appimage-arm64": {
