Revert "Properly import assets from public/ (#10189)"
This reverts commit 6ae41739c53550116b4b01565443b6154ad83f47.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "es2022",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "composite": false,
